# fastapi-tutorial

./: .gitignore  alembic.ini  config.py  main.py  pyproject.toml
migration/: env.py
migration/versions/: db4c7c8a96b3_create_user_table.py  fce3549f386b_alter_the_name_type_in_user.py
src/: db.py  firebase.py  main.py  migrate_db.py
src/cruds/: __init__.py  user.py
src/models/: AuthUser.py  user.py
src/routers/: user.py
src/schemas/: user.py
tests/: seed.py  test_main.py
